Fix conversation and tag layout on mobile
Ensure that on smaller screens the conversation panel takes up the full
width of the screen. (I.e. fix styling)

Fixes #90

--- a/feedback/static/feedback.css
+++ b/feedback/static/feedback.css
@@ -333,6 +333,8 @@ body {
 	.feedback-response-panel > .panel-body > .conversation-panel,
 	.feedback-response-panel > .panel-body > .conversation-tag-panel {
 		width: 100%;
+		max-width: 100%;
+		flex: none;
 	}
 	.feedback-response-panel > .panel-body > .conversation-tag-panel {
 		justify-content: flex-start;
